/*
 * $Id: ChangeLog,v 1.2524 2004/03/08 13:42:11 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-08 07:04 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    * Corrected Optional Marker NOT found in Result Pattern to be flaged Repeatable.

2004-03-08 22:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/inkey.c
    ! minor fix to previous changes (check type of parameter).

2004-03-08 19:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/inkey.c
    ! fix memory leaks on SETINKEYBEFOREBLOCK() and SETINKEYAFTERBLOCK()
      (Reported by : "Pavel Tsarenko" <tpe2@mail.ru> )

2004-03-08 18:20 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/hvm.c
    % remove hb_itemNew(NULL) in hb_vmSend()

2004-03-07 20:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed handling of [] context in strotrim() of first character after successful tranlation (iContext == 2 )

2004-03-07 17:32 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    - Restored recently removed logic in CommandStuff() under case '\17':

2004-03-07 16:31 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    + Added logic to mark USED and NON Repeatble Marker by changing it's type to 'X'
    + Added logic to REJECT any further matching of already USED and NON Repeatble Marker.
    - Removed redundant logic in CommandStuff() under case '\17':
    + Added HACK to getExpReal() to accept AS <type> postfix when matching List Markers.
    + Added HACK to getExpReal() to accept AS ARRAY OF <type> postfix when matching List Markers.

2004-03-08 04:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/hvm.c
    + there are 10 instances of hb_itemReleaseString() in hvm.c. 8 of which
      check bStatic status before calling the function leaving only 2 which