@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2524 2004/03/08 13:42:11 andijahja Exp $
+ * $Id: ChangeLog,v 1.2525 2004/03/08 14:57:31 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-03-08 09:02 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/pp/ppcore.c
+    * Changed getExpReal() (and calls) 5th paramater to int iContext
+    * HACK to support AS <type> and AS ARRAY OF <type> is now only when iContext == 1 (isExpres())
+    * Strick validation at bottom of getExpReal() now unconditional.
 
 2004-03-08 07:04 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/pp/ppcore.c
